[tool.poetry]
name = "esg_simulation"
version = "0.1.0"
description = ""
authors = ["krystofmincev <krystof.mincev@be.ey.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.3"
pandas = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
