[tool.poetry]
name = "esg_simulation"
version = "0.1.0"
description = ""
authors = ["krystofmincev <krystof.mincev@be.ey.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"  # Update the Python requirement
numpy = "^1.24.3"
pandas = "^1.2.0"  # Specify a compatible version for pandas
scikit-learn = "^1.2.2"
scipy = "^1.10.1"
plotly = "^5.14.1"
dash = "^2.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
